# SDL_bgi2

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
src/: SDL_bgi.c  SDL_bgi.h  graphics.h
test/: mandelbrot.c
